--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 # Ignorar node_modules en ambas carpetas
 /backend/node_modules
-/client/node_modules
+/frontend/node_modules
 
 # Ignorar archivos de entorno
 /backend/.env
-/client/.env
+/frontend/.env
 
 # Ignorar archivos de compilación
 /backend/dist
-/client/build
+/frontend/build
